Trabajé el responsive de las nuevas secciones Agenda y Bio

--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet"/>   
-  </head>>
+  </head>
   <body>
     <header class="header-pages">
       <nav class="navbar navbar-expand-sm">
