Modifiqué todos los alt de las imágenes para SEO + Modifiqué atributo title en los iframes de videos para SEO + Probé nueva background image del index para mobile

--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
     <meta name="description" content="Enterate de los próximos cursos, laboratorios, performances y eventos"> 
     <meta name="author" content="Lilaj Feiguin">
     <meta name="copyright" content="Adam Feiguin">
@@ -12,7 +11,6 @@
     <meta property="og: description" content="Enterate de los próximos cursos, laboratorios, performances y eventos">
     <meta property="og: image" content="https://lilufei85.github.io/website-adam-feiguin/pages/agenda.html">
     <meta property="og: url" content="https://lilufei85.github.io/website-adam-feiguin/">
-
     <title>Agenda | Adam Feiguin</title>   
     <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -24,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet"/>   
   </head>
   <body>
-    <header class="header-pages">
+    <header>
       <nav class="navbar navbar-expand-sm">
           <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,11 +59,11 @@
 
     <main>
       <section> <!--arranca seccion workshops-->         
-        <section class="contenedor-agenda"> 
+        <section class="contenedor-agenda"> <!--arranca seccion cards workshops-->  
             <article class="card__workshop"> <!--arranca card 1, workshop 1-->
               <div> <h4> PROPIOCEPCIÓN CON OBJETOS</h4></div>
               <div>
-                <img src="../assets/img/agenda/propiocepcion-objetos.jpg" alt="Workshop" class="img__workshop">
+                <img src="../assets/img/agenda/propiocepcion-objetos.jpg" alt="grupo de bailarines improvisando con pelotas de tenis" class="img__workshop">
               </div>
               <div>
                 <p> WORKSHOP<p>
@@ -79,7 +77,7 @@
             <article class="card__workshop"> <!--arranca card 2, workshop 2-->
               <div> <h4> MÉTODO FELDENKRAIS</h4></div>
               <div>
-                <img src="../assets/img/agenda/feldenkrais.jpg" alt="Workshop" class="img__workshop">
+                <img src="../assets/img/agenda/feldenkrais.jpg" alt="personas recostadas en el suelo con el brazo sobre su rostro" class="img__workshop">
               </div>
               <div>
                 <p>CLASES REGULARES<p>
@@ -93,7 +91,7 @@
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
               <div> <h4> LA VOZ DEL CUERPO</h4></div>
               <div>
-                <img src="../assets/img/agenda/voz-del-cuerpo.jpg" alt="Workshop" class="img__workshop">
+                <img src="../assets/img/agenda/voz-del-cuerpo.jpg" alt="Adam y Kanako saludando al final de una obra de danza" class="img__workshop">
               </div>
               <div>
                 <p>WORKSHOP FT. KANAKO<p>
@@ -107,7 +105,7 @@
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
               <div> <h4> MOVIMIENTO Y SONIDO </h4></div> 
               <div>
-                <img src="../assets/img/agenda/movimiento-sonido.jpg" alt="Workshop" class="img__workshop">
+                <img src="../assets/img/agenda/movimiento-sonido.jpg" alt="grupo de bailarines improvisando" class="img__workshop">
               </div>
               <div>
                 <p>LABORATORIO<p>
@@ -121,7 +119,7 @@
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
               <div> <h4> CONTACT</h4></div>
               <div>
-                <img src="../assets/img/agenda/contact.jpg" alt="Workshop" class="img__workshop">
+                <img src="../assets/img/agenda/contact.jpg" alt="dúos de bailarines improvisando" class="img__workshop">
               </div>
               <div>
                 <p>CLASES<p>
@@ -135,7 +133,7 @@
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
               <div> <h4> PARTENING</h4></div>
               <div>
-                <img src="../assets/img/agenda/partening.jpg" alt="Workshop" class="img__workshop">
+                <img src="../assets/img/agenda/partening.jpg" alt="pareja de bailarines realizando una acrobacia" class="img__workshop">
               </div>
               <div>
                 <p>CLASES<p>
@@ -149,7 +147,7 @@
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
               <div> <h4>CUERPO</h4></div>
               <div>
-                <img src="../assets/img/agenda/cuerpo.jpg" alt="Workshop" class="img__workshop">
+                <img src="../assets/img/agenda/cuerpo.jpg" alt="compañía bailando en una obra de percusión corporal" class="img__workshop">
               </div>
               <div>
                 <p>PERFORMANCE<p>
@@ -163,7 +161,7 @@
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
               <div> <h4> THE WORLD YOU IMAGINE</h4></div>
               <div>
-                <img src="../assets/img/agenda/the-world-you-imagine.jpg" alt="Workshop" class="img__workshop">
+                <img src="../assets/img/agenda/the-world-you-imagine.jpg" alt="bailarines improvisando danza con muebles" class="img__workshop">
               </div>
               <div>
                 <p>OBRA<p>
@@ -179,8 +177,7 @@
           <a href="../pages/contacto.html"> ¡Si no querés perderte próximas actividades o para contactarme para un trabajo <br>
             seguime en las redes sociales o visitá la sección Contacto haciendo click acá y escribime!
           </a>  
-        </div>
-            
+        </div>          
       </section>
     </main>
 
