--- a/pages/components.html
+++ b/pages/components.html
@@ -13,37 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Adamina&family=Anton&family=Rubik+Dirt&display=swap" rel="stylesheet">
 </head>
 <header class="header-pages">
-    <nav class="navbar navbar-expand-sm">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end navBar" id="navbarNavDropdown">
-                <ul class="navbar-nav navBar" >
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="ms-2 nav-item">
-                        <a class="nav-link" href="../pages/sobremi.html">Sobre Mi</a>
-                    </li>
-                    <li class="ms-2 nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="../pages/components.html">Fotos</a></li>
-                        <li><a class="dropdown-item" href="../pages/components.html">Videos</a></li>
-                    </ul>
-                    </li>
-                    <li class="ms-2 nav-item">
-                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 </header>
 
 <body>  
-    <main>
+    <main> <!--carrousel para incpororar más adelante, ya con estilos-->
         
         <div class="container">
         <div class="container-fluid bg-secondary text-white bg-container-carousel">
