--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
     <meta name="description" content="Galería de Imágenes y Videos"> 
     <meta name="author" content="Lilaj Feiguin">
     <meta name="copyright" content="Adam Feiguin">
@@ -12,7 +11,6 @@
     <meta property="og: description" content="Te invito a ver parte de mi trabajo en imágenes y videos">
     <meta property="og: image" content="./assets/img/opengraph.jpg">
     <meta property="og: url" content="https://lilufei85.github.io/website-adam-feiguin/pages/galeria.html">
-    
     <title>Galería Audiovisual | Adam Feiguin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
@@ -25,7 +23,7 @@
   </head>
 
   <body>
-    <header class="header-pages">
+    <header>
       <nav class="navbar navbar-expand-sm">
           <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,52 +59,50 @@
 
     <main>
       <section class="imgGallery">
-        <!--seccion fotos
-        <h2>Fotos</h2>-->
+        <!--seccion fotos-->
         <section class="container-fotos">
-          <div> <img src="../assets/img/desktop/domo1.jpg" alt="Foto Domo2"  class="foto foto-2"/></div>
-          <div> <img src="../assets/img/desktop/domo2.jpg" alt="Foto Domo2"  class="foto foto-2"/> </div>
-          <div> <img src="../assets/img/desktop/domo3.jpg" alt="Foto Domo3" class="foto foto-3"/> </div>
-          <div> <img src="../assets/img/desktop/campo1.jpg" alt="Foto Campo1" class="foto foto-4"/> </div>
-          <div> <img src="../assets/img/desktop/campo2.jpg" alt="Foto Campo2" class="foto foto-5"/> </div>
-          <div> <img src="../assets/img/desktop/campo3.jpg" alt="Foto Campo3" class="foto foto-6"/> </div>
-          <div> <img src="../assets/img/desktop/naked1.jpg" alt="Foto Naked1" class="foto foto-7"/></div>
-          <div> <img src="../assets/img/desktop/naked2.jpg" alt="Foto Naked2" class="foto foto-8"/></div>
-          <div> <img src="../assets/img/desktop/naked3.jpg" alt="Foto Naked3" class="foto foto-9"/></div>
-          <div> <img src="../assets/img/desktop/park1.jpg" alt="Foto Park1" class="foto foto-10"/></div>
-          <div> <img src="../assets/img/desktop/park2.jpg" alt="Foto Park2" class="foto foto-11"/></div>
-          <div> <img src="../assets/img/desktop/park3.jpg" alt="Foto Park3" class="foto foto-12"/></div>
-          <div> <img src="../assets/img/desktop/city1.jpg" alt="Foto City1" class="foto foto-13"/></div>
-          <div> <img src="../assets/img/desktop/city2.jpg" alt="Foto City2" class="foto foto-14"/></div>
-          <div> <img src="../assets/img/desktop/city3.jpg" alt="Foto City3" class="foto foto-15"/></div>
-          <div> <img src="../assets/img/desktop/agua1.jpg" alt="Foto Agua1" class="foto foto-16"/></div>
-          <div> <img src="../assets/img/desktop/agua2.jpg" alt="Foto Agua2" class="foto foto-17"/></div>
-          <div> <img src="../assets/img/desktop/agua3.jpg" alt="Foto Agua3" class="foto foto-18"/></div>
-          <div> <img src="../assets/img/desktop/winter1.jpg" alt="Foto Winter1" class="foto foto-19"/></div>
-          <div> <img src="../assets/img/desktop/winter2.jpg" alt="Foto Winter2" class="foto foto-20"/></div>
-          <div> <img src="../assets/img/desktop/winter3.jpg" alt="Foto winter3" class="foto foto-21"/></div>
-          <div> <img src="../assets/img/desktop/fruta1.jpg" alt="Foto Fruta1" class="foto foto-22"/></div>
-          <div> <img src="../assets/img/desktop/fruta2.jpg" alt="Foto Fruta2" class="foto foto-23"/></div>
-          <div> <img src="../assets/img/desktop/fruta3.JPG" alt="Foto Fruta3" class="foto foto-24"/></div>
+          <div> <img src="../assets/img/desktop/domo1.jpg" alt="bailarín haciendo break dance"  class="foto foto-1"/> </div>
+          <div> <img src="../assets/img/desktop/domo2.jpg" alt="bailarín trepado a una estructura"  class="foto foto-2"/> </div>
+          <div> <img src="../assets/img/desktop/domo3.jpg" alt="bailarín haciendo un salto estilo Superman" class="foto foto-3"/> </div>
+          <div> <img src="../assets/img/desktop/campo1.jpg" alt="bailarín danzando en el campo" class="foto foto-4"/> </div>
+          <div> <img src="../assets/img/desktop/campo2.jpg" alt="bailarín haciendo un paso de danza moderna" class="foto foto-5"/> </div>
+          <div> <img src="../assets/img/desktop/campo3.jpg" alt="bailarín haciendo un salto bolita en el aire" class="foto foto-6"/> </div>
+          <div> <img src="../assets/img/desktop/naked1.jpg" alt="bailarín haciendo un desnudo artístico con un paso de danza contemporánea" class="foto foto-7"/></div>
+          <div> <img src="../assets/img/desktop/naked2.jpg" alt="bailarín haciendo un desnudo artístico con un árbol" class="foto foto-8"/></div>
+          <div> <img src="../assets/img/desktop/naked3.jpg" alt="bailarín haciendo un desnudo artístico con huesos de estudio de anatomía" class="foto foto-9"/></div>
+          <div> <img src="../assets/img/desktop/park1.jpg" alt="bailarín haciendo un salto de danza clásica" class="foto foto-10"/></div>
+          <div> <img src="../assets/img/desktop/park2.jpg" alt="dúo de bailarines realizando partener" class="foto foto-11"/></div>
+          <div> <img src="../assets/img/desktop/park3.jpg" alt="bailarín llevando en el hombro a bailarina" class="foto foto-12"/></div>
+          <div> <img src="../assets/img/desktop/city1.jpg" alt="bailarín haciendo un salto en la fachada del Teatro Colón" class="foto foto-13"/></div>
+          <div> <img src="../assets/img/desktop/city2.jpg" alt="bailarín haciendo una parada en una mano con piernas en alto estilo break dance" class="foto foto-14"/></div>
+          <div> <img src="../assets/img/desktop/city3.jpg" alt="bailarín saltando y pasando una pierna por dentro de la otra" class="foto foto-15"/></div>
+          <div> <img src="../assets/img/desktop/agua1.jpg" alt="bailarín mirando a cámara con un chorro de agua detrás en movimiento" class="foto foto-16"/></div>
+          <div> <img src="../assets/img/desktop/agua2.jpg" alt="bailarín con cara cubierta y envuelta por agua en movimiento con un recorrido circular" class="foto foto-17"/></div>
+          <div> <img src="../assets/img/desktop/agua3.jpg" alt="bailarín mojado con agua en movimiento que le llega desde el lado izquierdo de su cuerpo" class="foto foto-18"/></div>
+          <div> <img src="../assets/img/desktop/winter1.jpg" alt="bailarín improvisando movmientos con sus manos con una campera y su cara oculta" class="foto foto-19"/></div>
+          <div> <img src="../assets/img/desktop/winter2.jpg" alt="rostro de bailarín mirando a cámara con una campera puesta" class="foto foto-20"/></div>
+          <div> <img src="../assets/img/desktop/winter3.jpg" alt="bailarín haciendo variación de un arco sobre el suelo" class="foto foto-21"/></div>
+          <div> <img src="../assets/img/desktop/fruta1.jpg" alt="bailarín sentado improvisando una danza con frutas varias y un sombrero" class="foto foto-22"/></div>
+          <div> <img src="../assets/img/desktop/fruta2.jpg" alt="bailarín improvisando con frutas, verduras, un sombrero y un libro" class="foto foto-23"/></div>
+          <div> <img src="../assets/img/desktop/fruta3.JPG" alt="bailarín improvisando con un broche, un sombrero, libros, frutas y verduras" class="foto foto-24"/></div>
         </section>
       <section id="videos"> 
-        <!--seccion videos
-        <h2>Videos</h2>-->
+        <!--seccion videos-->
         <section class="container-videos"> 
           <div class="video-1">
             <iframe
             src="https://www.youtube.com/embed/dBg6KAlECyk"
-            title="Eternidad"
+            title="Eternidad - Pieza de videodanza por Adam Feiguin"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
             class="video__styling">
             </iframe>
           </div>
-          <div class="video-2   ">
+          <div class="video-2">
             <iframe
             src="https://www.youtube.com/embed/3-MGYgvhKEY"
-            title="Sinfonía Humana - Adam Feiguin"
+            title="Sinfonía Humana - Pieza de videodanza por Adam Feiguin"
             frameborder="0"
             allow="accel erometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
@@ -116,7 +112,7 @@
           <div class="video-3">
             <iframe
             src="https://www.youtube.com/embed/4oV58lLzhAg?list=PLymOtR5jGxHixgz11fc50Afw-R_BW6aez"
-            title="Adam Feiguin"
+            title="Adam Feiguin danzando"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
@@ -126,7 +122,7 @@
           <div class="video-4">
             <iframe
             src="https://www.youtube.com/embed/XGXQcF2vD1Q"
-            title="Adam Feiguin ft. Kanako Hongo"
+            title="Adam Feiguin improvisando con Kanako Hongo"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
