--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
     <meta name="description" content="Contactame a través del siguiente formulario, o haciendo click en los links a mis redes sociales"> 
     <meta name="author" content="Lilaj Feiguin">
     <meta name="copyright" content="Adam Feiguin">
@@ -12,7 +11,6 @@
     <meta property="og: description" content="Contactame a través del siguiente formulario, o haciendo click en los links a mis redes sociales">
     <meta property="og: image" content="./assets/img/opengraph.jpg">
     <meta property="og: url" content="https://lilufei85.github.io/website-adam-feiguin/pages/contacto.html">
-    
     <title>Contacto | Adam Feiguin</title>
     <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -25,7 +23,7 @@
   </head>
 
   <body>
-    <header class="header-pages">
+    <header>
       <nav class="navbar navbar-expand-sm">
           <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -91,7 +89,7 @@
           </div>
           <div class="flex-newsletter">
             <p class="label-newsletter">Deseo recibir el newsletter</p>
-            <!-- <label for="newsletter" class="label-newsletter">Deseo recibir el newsletter</label>-->
+            <label for="newsletter" class="label-newsletter"></label>
             <input type="checkbox" name="newsletter" id="1" class="checkbox"/> 
           </div>
           <button type="submit" class="button-contacto">Enviar</button>
