--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og: image" content="./assets/img/opengraph.jpg">
     <meta property="og: url" content="https://lilufei85.github.io/website-adam-feiguin/">
     <title> Adam Feiguin</title>
-    <link rel="shortcut icon" href=".assets/icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
