Modifiqué estética de menú hamburguesa index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header></header>   
     <main>
       <section class="container-index">
-        <nav class="navbar navbar-expand-sm bg-light opacity-75 nav-hamburguesa-index">
+        <nav class="navbar navbar-expand-sm nav-hamburguesa-index"> <!--menu bs hamburguesa, saqué por ahora bg-light opacity-75-->
           <div class="container-fluid">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -34,23 +34,23 @@
               <div class="collapse navbar-collapse justify-content-center navBar" id="navbarNavDropdown">
                   <ul class="navbar-nav d-flex justify-content-evenly" >
                       <li class="nav-item">
-                          <a class="nav-link" href="./index.html">Inicio</a>
+                          <a class="nav-link bg-light opacity-75" href="./index.html">Inicio</a>
                       </li>
                       <li class="ms-2 nav-item">
-                          <a class="nav-link link-2" href="./pages/sobremi.html">Sobre Mi</a>
+                          <a class="nav-link link-2 bg-light opacity-75" href="./pages/sobremi.html">Sobre Mi</a>
                       </li>
                       <li class="ms-2 nav-item dropdown">
-                          <a class="nav-link link-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
+                          <a class="nav-link link-3 bg-light opacity-75 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-autoclose="true" aria-expanded="false">Galería</a>
                       <ul class="dropdown-menu dropdown-index">
                           <li><a class="dropdown-item" href="./pages/galeria.html">Fotos</a></li>
                           <li><a class="dropdown-item" href="./pages/galeria.html#videos">Videos</a></li>
                       </ul>
                       </li>
                       <li class="ms-2 nav-item">
-                        <a class="nav-link link-4" href="./pages/agenda.html">Agenda</a>
+                        <a class="nav-link link-4 bg-light opacity-75" href="./pages/agenda.html">Agenda</a>
                       <li class="ms-2 nav-item">                      
                       <li class="ms-2 nav-item">
-                          <a class="nav-link link-5" href="./pages/contacto.html">Contacto</a>
+                          <a class="nav-link link-5 bg-light opacity-75" href="./pages/contacto.html">Contacto</a>
                       </li>
                   </ul>
               </div>
