Declaré widht y height iconos footer + agregué li a las ul footer + di funcionalidad a botones de más info en agenda

--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -71,7 +71,7 @@
                 Lugar: Lugar del workshop</p>
               </div>
               <div class="contenedor-button">
-                <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
+                <button class="button-info"><a target="_blank" href="https://wa.me/5491160104592?text=Hola,%20quisiera%20información%20sobre%20el%20workshop%20de%20Propiocepción%20con%20Objetos">+ info</a></button>
               </div>
             </article>
             <article class="card__workshop"> <!--arranca card 2, workshop 2-->
@@ -85,7 +85,7 @@
                 Lugar: Lugar del workshop</p>
               </div>
               <div class="contenedor-button">
-                <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
+                <button class="button-info"><a target="_blank" href="https://wa.me/5491160104592?text=Hola,%20quisiera%20información%20sobre%20las%20clases%20regulares%20de%20Método%20Feldenkrais">+ info</a></button>
               </div>
             </article>
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
@@ -99,7 +99,7 @@
                 Lugar: Lugar del workshop</p>
               </div>
               <div class="contenedor-button">
-                <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
+                <button class="button-info"><a target="_blank" href="https://wa.me/5491160104592?text=Hola,%20quisiera%20información%20sobre%20el%20workshop%20de%20La%20Voz%20del%20Cuerpo">+ info</a></button>
               </div>
             </article>
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
@@ -113,7 +113,8 @@
                 Lugar: Lugar del workshop</p> 
               </div>
               <div class="contenedor-button">
-                <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
+                <button class="button-info"><a target="_blank" href="https://wa.me/5491160104592?text=Hola,%20quisiera%20información%20sobre%20el%20laboratorio%20Movimiento%20y%20Sonido
+                  ">+ info</a></button>
               </div>
             </article>
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
@@ -127,7 +128,8 @@
                 Lugar: Lugar del workshop</p>
               </div>
               <div class="contenedor-button">
-                <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
+                <button class="button-info"><a target="_blank" href="https://wa.me/5491160104592?text=Hola,%20quisiera%20información%20sobre%20las%20clases%20de%20Contact
+                  ">+ info</a></button>
               </div>
             </article>
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
@@ -141,7 +143,8 @@
                 Lugar: Lugar del workshop</p>
               </div>
               <div class="contenedor-button">
-                <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
+                <button class="button-info"><a target="_blank" href="https://wa.me/5491160104592?text=Hola,%20quisiera%20información%20sobre%20las%20clases%20de%20Partening
+                  ">+ info</a></button>
               </div>
             </article>
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
@@ -155,7 +158,8 @@
                 Lugar: Lugar del workshop</p>
               </div>
               <div class="contenedor-button">
-                <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
+                <button class="button-info"><a target="_blank" href="https://wa.me/5491160104592?text=Hola,%20quisiera%20información%20sobre%20la%20performance%20de%20Cuerpo
+                  ">+ info</a></button>
               </div>
             </article>  
             <article class="card__workshop"> <!--arranca card 3, workshop 3-->
@@ -169,7 +173,8 @@
                 Lugar: Lugar del workshop</p>
               </div>
               <div class="contenedor-button">
-                <button class="button-info"><a href="mailto:adamfeiguin@gmail.com"></a>+ info</button>
+                <button class="button-info"><a target="_blank" href="https://wa.me/5491160104592?text=Hola,%20quisiera%20información%20sobre%20la%20obra%20The%20World%20You%20Imagine
+                  ">+ info</a></button>
               </div>
             </article>   
         </section>
@@ -184,10 +189,10 @@
     <footer class="footer-pages">
       <div> <!--div iconos redes-->
         <ul>
-          <a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="../assets/icons/instagram.png" alt="Instagra"> </a>   
-          <a target="_blank" href="https://www.facebook.com/adam.feiguin"> <img src="../assets/icons/facebook.png" alt="Facebook"> </a>
-          <a target="_blank" href="mailto:adamfeiguin@gmail.com"> <img src="../assets/icons/email.png" alt="Email"> </a>
-          <a target="_blank" href="https://wa.me/5491160104592?text=Hola"> <img src="../assets/icons/whatsapp.png" alt="Whatsapp"> </a>
+          <li><a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="../assets/icons/instagram.png" alt="Instagram" class="footer-icon"> </a></li>   
+          <li><a target="_blank" href="https://www.facebook.com/adam.feiguin"> <img src="../assets/icons/facebook.png" alt="Facebook" class="footer-icon"> </a></li>
+          <li><a target="_blank" href="mailto:adamfeiguin@gmail.com"> <img src="../assets/icons/email.png" alt="Email" class="footer-icon"> </a></li>
+          <li><a target="_blank" href="https://wa.me/5491160104592?text=Hola"> <img src="../assets/icons/whatsapp.png" alt="Whatsapp" class="footer-icon"> </a></li>
         </ul>
       </div>  
       <p>&copy; 2022. Adam Feiguin. Todos los derechos reservados</p>
