--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -106,10 +106,10 @@
     <footer class="footer-pages">
       <div> <!--div iconos redes-->
         <ul>
-          <a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="../assets/icons/instagram.png" alt="Instagra"> </a>   
-          <a target="_blank" href="https://www.facebook.com/adam.feiguin"> <img src="../assets/icons/facebook.png" alt="Facebook"> </a>
-          <a target="_blank" href="mailto:adamfeiguin@gmail.com"> <img src="../assets/icons/email.png" alt="Email"> </a>
-          <a target="_blank" href="https://wa.me/5491160104592?text=Hola"> <img src="../assets/icons/whatsapp.png" alt="Whatsapp"> </a>
+          <li><a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="../assets/icons/instagram.png" alt="Instagram" class="footer-icon"> </a></li>   
+          <li><a target="_blank" href="https://www.facebook.com/adam.feiguin"> <img src="../assets/icons/facebook.png" alt="Facebook" class="footer-icon"> </a></li>
+          <li><a target="_blank" href="mailto:adamfeiguin@gmail.com"> <img src="../assets/icons/email.png" alt="Email" class="footer-icon"> </a></li>
+          <li><a target="_blank" href="https://wa.me/5491160104592?text=Hola"> <img src="../assets/icons/whatsapp.png" alt="Whatsapp" class="footer-icon"> </a></li>
         </ul>
       </div>  
       <p>&copy; 2022. Adam Feiguin. Todos los derechos reservados</p>
