Arreglé h2 bio + Reduje tiempo de animación de foto + agregué height auto a foto bio + Agregué mas gap entre cards agenda +definí height para las img de card agenda + Declaré height para fotos galeria +borré las cosas de js y hojas de estilo que no estoy utilizando + cambié foto index desktop

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
 
   <body class="body-index">
-    <header></header>   
-    <main>
+ 
+    <div>
       <section class="container-index">
         <nav class="navbar navbar-expand-sm nav-hamburguesa-index"> <!--menu bs hamburguesa, saqué por ahora bg-light opacity-75-->
           <div class="container-fluid">
@@ -65,20 +65,15 @@
         <div class="banner-index" title="bailarín haciendo una pose sobre su cabeza"></div>
         <p class="adam">ADAM</p> 
         <p class="feiguin">FEIGUIN</p>
-      </section>
-    </main>
-
-    <footer>
-      <div> <!--div iconos redes-->
-        <ul>
+        <ul class="redes-index-desktop">
           <li><a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="./assets/icons/instagram.png" alt="Instagram" class="footer-icon"> </a></li>   
           <li><a target="_blank" href="https://www.facebook.com/adam.feiguin"> <img src="./assets/icons/facebook.png" alt="Facebook" class="footer-icon"> </a></li>
           <li><a target="_blank" href="mailto:adamfeiguin@gmail.com"> <img src="./assets/icons/email.png" alt="Email" class="footer-icon"> </a></li>
           <li><a target="_blank" href="https://wa.me/5491160104592?text=Hola"> <img src="./assets/icons/whatsapp.png" alt="Whatsapp" class="footer-icon"> </a></li>
         </ul>
-      </div>  
-      <p>&copy; 2022. Adam Feiguin. Todos los derechos reservados</p>
-    </footer>
+        <p class="derechos">&copy; 2022. Adam Feiguin. Todos los derechos reservados</p>
+      </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
   </body>
