--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -83,7 +83,7 @@
             <input type="email" id="email" name="email" class="input-email"/>
           </div>
           <div>
-            <label for="mensaje" class="label-msje">Mensaje: </label> </div>
+            <label for="mensaje" class="label-msje">Mensaje: </label> 
           <div>
             <textarea name="mensaje" id="" cols="30" rows="10" class="text-msje"></textarea> 
           </div>
@@ -92,7 +92,9 @@
             <label for="newsletter" class="label-newsletter"></label>
             <input type="checkbox" name="newsletter" id="1" class="checkbox"/> 
           </div>
-          <button type="submit" class="button-contacto">Enviar</button>
+          <div class="flex-button">
+            <button type="submit" class="button-contacto">Enviar</button>
+          </div>
         </form>
       </section>
       
