--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -82,9 +82,9 @@
           <div> <img src="../assets/img/desktop/winter1.jpg" alt="bailarín improvisando movmientos con sus manos con una campera y su cara oculta" class="foto foto-19"/></div>
           <div> <img src="../assets/img/desktop/winter2.jpg" alt="rostro de bailarín mirando a cámara con una campera puesta" class="foto foto-20"/></div>
           <div> <img src="../assets/img/desktop/winter3.jpg" alt="bailarín haciendo variación de un arco sobre el suelo" class="foto foto-21"/></div>
-          <div> <img src="../assets/img/desktop/fruta1.jpg" alt="bailarín sentado improvisando una danza con frutas varias y un sombrero" class="foto foto-22"/></div>
-          <div> <img src="../assets/img/desktop/fruta2.jpg" alt="bailarín improvisando con frutas, verduras, un sombrero y un libro" class="foto foto-23"/></div>
-          <div> <img src="../assets/img/desktop/fruta3.JPG" alt="bailarín improvisando con un broche, un sombrero, libros, frutas y verduras" class="foto foto-24"/></div>
+          <div> <img src="../assets/img/desktop/fruta1.jpg" alt="bailarín sentado improvisando una danza con frutas varias y un sombrero" class="foto-vert foto-22"/></div>
+          <div> <img src="../assets/img/desktop/fruta2.jpg" alt="bailarín improvisando con frutas, verduras, un sombrero y un libro" class="foto-vert foto-23"/></div>
+          <div> <img src="../assets/img/desktop/fruta3.JPG" alt="bailarín improvisando con un broche, un sombrero, libros, frutas y verduras" class="foto-vert foto-24"/></div>
         </section>
       <section id="videos"> 
         <!--seccion videos-->
@@ -109,26 +109,6 @@
             class="video__styling">
             </iframe>
           </div>
-          <div class="video-3">
-            <iframe
-            src="https://www.youtube.com/embed/4oV58lLzhAg?list=PLymOtR5jGxHixgz11fc50Afw-R_BW6aez"
-            title="Adam Feiguin danzando"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-            class="video__styling"
-          ></iframe>
-          </div>
-          <div class="video-4">
-            <iframe
-            src="https://www.youtube.com/embed/XGXQcF2vD1Q"
-            title="Adam Feiguin improvisando con Kanako Hongo"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-            class="video__styling"
-          ></iframe>
-          </div> 
         </section>
       </section>
     </main>
