sumé glasmorphism al nombre

--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
           <a href="./pages/contacto.html" class="link-5">Contacto</a>
         </nav>      
         <div class="banner-index" title="bailarín haciendo una pose sobre su cabeza"></div>
-        <p class="adam">ADAM</p> 
-        <p class="feiguin">FEIGUIN</p>
+        <div class="nombre">
+          <span class="adam">ADAM</span> 
+          <span class="feiguin">FEIGUIN</span>
+        </div>
         <ul class="redes-index-desktop">
           <li><a target="_blank" href="https://instagram.com/adamfeiguin?igshid=NmNmNjAwNzg="><img src="./assets/icons/instagram.png" alt="Instagram" class="footer-icon"> </a></li>   
           <li><a target="_blank" href="https://www.facebook.com/adam.feiguin"> <img src="./assets/icons/facebook.png" alt="Facebook" class="footer-icon"> </a></li>
